Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-5816

Incorrect byteorder for CAS values in OBSERVE response

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 2.0-beta
    • None
    • couchbase-bucket
    • Security Level: Public
    • None

    Description

      The CAS values which are going in the header encoded using htonll(), but those from OBSERVE response are not

      Verified as working with simple patch

      result.write((char*) &keystatus, sizeof(uint8_t));

      • result.write((char*) &kstats.cas, sizeof(uint64_t));
        + uint64_t tmp = htonll(kstats.cas);
        + result.write((char*) &tmp, sizeof(uint64_t));
        }

      Attachments

        For Gerrit Dashboard: MB-5816
        # Subject Branch Project Status CR V

        Activity

          People

            mikew Mike Wiederhold [X] (Inactive)
            avsej Sergey Avseyev
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty