MB-5816: Fix cas byte order for observe response

Change-Id: If0801c6db6b066af7419198045ded29b42ee5855
Reviewed-on: http://review.couchbase.org/18006
Reviewed-by: Jin Lim <jin@couchbase.com>
Tested-by: Michael Wiederhold <mike@couchbase.com>